--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,39 +1,293 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="container-fluid header">
+
+
   <div class="container">
-    <h1 class="display-3">KNOW MORE. SHIPE MORE</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <div class="row copy">
+      <h1 class="display-3">Expect More<span>.</span> Ship More<span>.</span></h1>
+      <p class="lead"><span> Amplify will help you grow your business by partnering you with trusted carriers and supporting you every step of the way. </span></p>
+    </div>
+  </div>
+
+</div>
+
+<div class="container m-t-3 guarantee">
+
+
+  <h2 class="section-title"><span class="first">Expect More</span> <br> from the start<span>.</span></h2>
+
+
+  <div class="row m-t-3">
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg ">
+          <img class="card-img-top" src="assets/img/ots.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title text-xs-center">On-time Service</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/tracking.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title text-xs-center">Tracking</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/support.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title text-xs-center">Support</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
 
-<div class="container">
+<div class="container m-t-3 services2">
 
-  <div class="row">
-    <div class="col-sm-6">
+  <h2 class="section-title"><span class="first">Everything you need to grow</span> <br> in once place<span>.</span></h2>
+
+  <h3>We know what matters to our partners, because we dive to the core of challenges they are having. We provide all solutions from warehousing, multimodal, and auditing SCM.
+  </h3>
+
+
+  <div class="row m-t-3">
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/ltl.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h5 class="card-title">LTL / LTC </h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/ftl.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">FTL / FCL</h4>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/expedited.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title ">Expedited</h4>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row m-t-2">
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/air.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Air </h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/ocean.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Ocean </h4>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/warehouse.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Warehousing</h4>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row m-t-2">
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/audit.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Auditing</h4>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/ltl.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Bulk </h4>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/jit.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Just in Time</h4>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row m-t-2">
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/jit.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Route Optimization</h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/ltl.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Over Dimensional </h4>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-bg text-xs-center">
+          <img class="card-img-top" src="assets/img/ltl.png" class="img-fluid" alt="Card image cap">
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Overflow Capacity</h4>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+
+
+
+
+<div class="container m-t-3 services1 text-xs-center">
+
+
+
+  <div class="row m-t-3">
+
+
+    <div class="col-sm-4 ">
       <div class="card">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-block">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Vestibulum at eros</li>
-        </ul>
-        <div class="card-block">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <h4 class="card-title">Solutions Consultant</h4>
+          <p class="card-text">Focuses on what challenges your supply chain faces. </p>
         </div>
       </div>
     </div>
-    <div class="col-sm-6">
-      <div class="card card-block">
-        <h3 class="card-title">Shippers</h3>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="col-sm-4">
+      <div class="card">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Solutions Coordinator</h4>
+          <p class="card-text">Develops a plan on how we can reduce risk and increase efficiency. </p>
+        </div>
       </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Relationship Development</h4>
+          <p class="card-text">Executes on the plan and communicates progress back to you.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+
+<div class="container m-t-3 industries">
+  <div class="row ">
+    <div class="col-sm-2">
+      <img src="assets/img/group.png">
+      <p>Retail</p>
+    </div>
+    <div class="col-sm-2">
+      <img src="assets/img/group.png">
+      <p>High Value</p>
+    </div>
+    <div class="col-sm-2">
+      <img src="assets/img/group.png">
+      <p>Produce</p>
+    </div>
+    <div class="col-sm-2">
+      <img src="assets/img/group.png">
+      <p>Pharmaceutical</p>
+    </div>
+    <div class="col-sm-2">
+      <img src="assets/img/group.png">
+      <p>Industrial</p>
+    </div>
+    <div class="col-sm-2">
+      <img src="assets/img/group.png">
+      <p>Project</p>
     </div>
   </div>
-
 </div>
