--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,11 +1,133 @@
 @import 'bootstrap';
 
-$primary-bg-color: #4A90E2;
+$primary-bg-color: #11202F;
 $secondary-bg-color: #F5A623;
 $primary-font-color: #fff;
 
-// Navbar //
+body{
+  background: #F9F9F9;
+  color: #333333;
+  -webkit-font-smoothing: antialiased;
+}
+
+.header{
+  background-image: url('/assets/img/cover6.png');
+  position: relative;
+  width: 100%;
+  padding: 30px 20px;
+  color: inherit;
+  background-color: $primary-font-color;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: table;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  .display-3{
+    font-weight: 600;
+    span{
+      color: $secondary-bg-color;
+    }
+  }
+  .lead{
+    font-weight: 600;
+    max-width: 60%;
+    color: #333333;
+    line-height: 3rem;
+    margin-left: 20px;
+  }
+
+  .lead span{
+     background-color: $secondary-bg-color;
+     padding: 0.4rem 0;
+     -webkit-box-shadow: 1rem 0px 0px $secondary-bg-color, -1rem 0px 0px $secondary-bg-color;
+     box-shadow: 1rem 0px 0px $secondary-bg-color, -1rem 0px 0px $secondary-bg-color;
+     box-decoration-break: clone;
+  }
+
+}
+
+.section-title{
+  font-weight: 800;
+  font-size: 3rem;
+  .first{
+        box-shadow: inset 0 -7px 0 #F9F9F9,inset 0 -9px 0 #333333;
+  }
+  span{
+    color: $secondary-bg-color;
+  }
+}
+
+.services2{
+  .card{
+    .card-bg{
+      padding: 10px;
+    }
+  }
+  .card-bg{
+    background-color: $secondary-bg-color;
+    display: table-cell;
+    vertical-align: top;
+    img{
+      max-width: 80px;
+    }
+  }
+  .card-block{
+    display: table-cell;
+    vertical-align: top;
+  }
+}
+
+.guarantee{
+  .card-bg{
+    img{
+      padding: 20px;
+    }
+  }
+
+}
+
+.industries{
+  background: $primary-bg-color;
+  padding: 50px 0;
+
+}
+
+// .new{
+//   .growth{
+//   position: absolute;
+//   right: 0;
+//   width: 100%;
+//   bottom: 0;
+//   vertical-align: middle;
+//   }
+// }
+
+.copy {
+      display: table-cell;
+      vertical-align: middle;
+      padding-bottom: 80px !important;
+    h1{
+      color: $primary-font-color;
+    }
+    p{
+      color: #ccc;
+    }
+}
+
+.value{
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+}
+
 .navbar{
+  padding: 20px 0;
+  .nav-link{
+    color: $primary-font-color !important;
+  }
   background: $primary-bg-color;
   @include border-radius(0);
   img{
@@ -13,31 +135,16 @@ $primary-font-color: #fff;
   }
 }
 
-// .navbar.transparent.navbar-inverse .navbar-inner {
-//     border-width: 0px;
-//     -webkit-box-shadow: 0px 0px;
-//     box-shadow: 0px 0px;
-//     background-color: rgba(0,0,0,0.0);
-//     background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
-//     background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
-//     background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
-// }
 
-.report{
-  background: $secondary-bg-color;
-  color: $primary-font-color;
-}
+// Footer //
 
-
-// Header //
-
-.jumbotron {
-  padding: $jumbotron-padding ($jumbotron-padding / 2);
-  margin-bottom: $jumbotron-padding;
-  background-color: $primary-bg-color;
-  color: $primary-font-color;
-
-  @include media-breakpoint-up(sm) {
-    padding: ($jumbotron-padding * 2) $jumbotron-padding;
-  }
+#footer {
+    background: $primary-bg-color;
+    color: $primary-font-color;
+    z-index: 9;
+    position: relative;
+    img{
+      max-width: 50%;
+    }
+    padding: 3.5rem;
 }
